--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,26 @@
+# 修改配置后重启编辑器
+# 配置项文档：https://editorconfig.org/
+
+# 告知 EditorConfig 插件，当前即是根文件
 root = true
 
-[*] # 表示所有文件适用
-charset = utf-8 # 设置文件字符集为 utf-8
-indent_style = space # 缩进风格（tab | space）
-indent_size = 2 # 缩进大小
-end_of_line = lf # 控制换行类型(lf | cr | crlf)
-trim_trailing_whitespace = true # 去除行尾的任意空白字符
-insert_final_newline = true # 始终在文件末尾插入一个新行
+# 适用全部文件
+[*]
+## 设置字符集
+charset = utf-8
+## 缩进风格 space | tab，建议 space（会自动继承给 Prettier）
+indent_style = space
+## 缩进的空格数（会自动继承给 Prettier）
+indent_size = 2
+## 换行符类型 lf | cr | crlf，一般都是设置为 lf
+end_of_line = lf
+## 是否在文件末尾插入空白行
+insert_final_newline = true
+## 是否删除一行中的前后空格
+trim_trailing_whitespace = true
 
-[*.md] # 表示仅 md 文件适用以下规则
-max_line_length = off
+# 适用 .md 文件
+[*.md]
+insert_final_newline = false
 trim_trailing_whitespace = false
+
