--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@types/js-cookie": "^3.0.6",
-    "@types/nprogress": "^0.2.3",
-    "@types/path-browserify": "^1.0.2",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
     "element-plus": "^2.7.2",
@@ -33,14 +31,17 @@
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vxe-table": "^4.6.7",
+    "vxe-table": "^4.5.21",
     "vxe-table-plugin-element": "^4.0.1",
     "xe-utils": "^3.5.25"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.12.5",
+    "@types/nprogress": "^0.2.3",
+    "@types/path-browserify": "^1.0.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
