字段信息页面

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@smallwei/avue": "^3.4.1",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
@@ -25,6 +26,8 @@
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.2",
     "pinia": "^2.1.7",
+    "relation-graph": "^2.2.0",
+    "relation-graph-vue3": "^2.2.0",
     "screenfull": "^6.0.2",
     "unocss": "^0.59.4",
     "vite-plugin-svg-icons": "^2.0.1",
@@ -42,12 +45,15 @@
     "@types/node": "^20.12.5",
     "@types/nprogress": "^0.2.3",
     "@types/path-browserify": "^1.0.2",
+    "@types/smallwei__avue": "^3.0.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "i": "^0.3.7",
+    "npm": "^10.7.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
     "sass": "^1.75.0",
