--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.21",
+    "vue-draggable-plus": "^0.4.0",
     "vue-router": "^4.3.0",
+    "vuedraggable": "^4.1.0",
     "vxe-table": "^4.5.21",
     "vxe-table-plugin-element": "^4.0.1",
     "xe-utils": "^3.5.25"
