--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.2",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "relation-graph": "^2.2.0",
     "relation-graph-vue3": "^2.2.0",
     "screenfull": "^6.0.2",
