修改路由前缀

--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@
 ## 项目标题
 VITE_APP_TITLE = ECMDB
 VITE_BASE_API = '/api'
-VITE_ROUTER_HISTORY = 'hash'
+#  html5 OR hash
+VITE_ROUTER_HISTORY = 'html5'
 VITE_PUBLIC_PATH = '/'
