--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "relation-graph-vue3": "^2.2.0",
     "screenfull": "^6.0.2",
     "unocss": "^0.59.4",
+    "uuid": "^9.0.1",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.21",
@@ -48,6 +49,7 @@
     "@types/node": "^20.12.5",
     "@types/nprogress": "^0.2.3",
     "@types/path-browserify": "^1.0.2",
+    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
