--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@form-create/designer": "^3.2.1",
+    "@form-create/element-ui": "^3.1.33",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/runtime-dom": "^3.4.27",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
-    "element-plus": "^2.7.2",
+    "element-plus": "^2.7.5",
     "js-cookie": "^3.0.5",
     "mitt": "^3.0.1",
     "normalize.css": "^8.0.1",
