--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.16.2",
+    "@codemirror/lang-python": "^6.1.6",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@element-plus/icons-vue": "^2.3.1",
     "@form-create/designer": "^3.2.1",
     "@form-create/element-ui": "^3.1.33",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/runtime-dom": "^3.4.27",
     "axios": "^1.6.8",
+    "codemirror": "^6.0.1",
     "dayjs": "^1.11.11",
     "element-plus": "^2.7.5",
     "js-cookie": "^3.0.5",
@@ -37,6 +41,7 @@
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.21",
+    "vue-codemirror": "^6.1.1",
     "vue-draggable-plus": "^0.4.0",
     "vue-router": "^4.3.0",
     "vuedraggable": "^4.1.0",
