--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.16.2",
+    "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@element-plus/icons-vue": "^2.3.1",
@@ -22,6 +23,8 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/runtime-dom": "^3.4.27",
     "axios": "^1.6.8",
+    "cm6-theme-material-dark": "^0.2.0",
+    "cm6-theme-nord": "^0.2.0",
     "codemirror": "^6.0.1",
     "dayjs": "^1.11.11",
     "element-plus": "^2.7.5",
@@ -36,6 +39,7 @@
     "relation-graph": "^2.2.0",
     "relation-graph-vue3": "^2.2.0",
     "screenfull": "^6.0.2",
+    "thememirror": "^2.0.1",
     "unocss": "^0.59.4",
     "uuid": "^9.0.1",
     "vite-plugin-svg-icons": "^2.0.1",
