--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@codemirror/autocomplete": "^6.16.2",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.6",
+    "@codemirror/legacy-modes": "^6.4.0",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@element-plus/icons-vue": "^2.3.1",
     "@form-create/designer": "^3.2.1",
@@ -39,6 +40,7 @@
     "relation-graph": "^2.2.0",
     "relation-graph-vue3": "^2.2.0",
     "screenfull": "^6.0.2",
+    "shell": "link:@codemirror/legacy-modes/mode/shell",
     "thememirror": "^2.0.1",
     "unocss": "^0.59.4",
     "uuid": "^9.0.1",
