--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@form-create/designer": "^3.2.1",
     "@form-create/element-ui": "^3.1.33",
+    "@logicflow/core": "2.0.0-beta.1",
+    "@logicflow/extension": "2.0.0-beta.1",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/runtime-dom": "^3.4.27",
     "axios": "^1.6.8",
@@ -29,6 +31,7 @@
     "codemirror": "^6.0.1",
     "dayjs": "^1.11.11",
     "element-plus": "^2.7.5",
+    "index.css": "link:@logicflow/core/dist/style/index.css",
     "js-cookie": "^3.0.5",
     "mitt": "^3.0.1",
     "normalize.css": "^8.0.1",
