--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "vue-draggable-plus": "^0.4.0",
     "vue-json-pretty": "^2.4.0",
     "vue-router": "^4.3.0",
+    "vue3-icon-picker": "^0.1.3",
     "vuedraggable": "^4.1.0",
     "vxe-table": "^4.5.21",
     "vxe-table-plugin-element": "^4.0.1",
