form-create 渲染模版

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "cm6-theme-nord": "^0.2.0",
     "codemirror": "^6.0.1",
     "dayjs": "^1.11.11",
+    "e-icon-picker": "^2.2.0",
     "element-plus": "^2.7.5",
+    "font-awesome": "^4.7.0",
     "index.css": "link:@logicflow/core/dist/style/index.css",
     "js-cookie": "^3.0.5",
     "mitt": "^3.0.1",
