--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "path-to-regexp": "^6.2.2",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "prismjs": "^1.29.0",
     "relation-graph": "^2.2.0",
     "relation-graph-vue3": "^2.2.0",
     "screenfull": "^6.0.2",
@@ -53,9 +54,11 @@
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.21",
+    "vue-code-highlight": "^0.7.8",
     "vue-codemirror": "^6.1.1",
     "vue-draggable-plus": "^0.4.0",
     "vue-json-pretty": "^2.4.0",
+    "vue-prism-editor": "2.0.0-alpha.2",
     "vue-router": "^4.3.0",
     "vue3-icon-picker": "^0.1.3",
     "vuedraggable": "^4.1.0",
@@ -70,6 +73,7 @@
     "@types/node": "^20.12.5",
     "@types/nprogress": "^0.2.3",
     "@types/path-browserify": "^1.0.2",
+    "@types/prismjs": "^1.26.4",
     "@types/uuid": "^9.0.8",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
@@ -87,6 +91,7 @@
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.8",
+    "vite-plugin-prismjs": "^0.0.11",
     "vue-tsc": "^2.0.11"
   },
   "pnpm": {
