refactor: 重构 template 模块，代码优化，第三方美观性

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "font-awesome": "^4.7.0",
     "index.css": "link:@logicflow/core/dist/style/index.css",
     "js-cookie": "^3.0.5",
+    "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
