--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -24,7 +24,7 @@ http {
         index index.html;
         root /usr/share/nginx/html;
         client_max_body_size 500M;
-        location /api {
+        location ^~ /api {
             proxy_pass http://ecmdb:8000;
             proxy_connect_timeout 300;
             proxy_send_timeout 300;
