feat: 排班系统demo页面

--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@form-create/designer": "^3.2.8",
     "@form-create/element-ui": "^3.1.33",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/resource": "^6.1.15",
+    "@fullcalendar/resource-timeline": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@fullcalendar/vue3": "^6.1.15",
     "@jinming6/merge-helper": "^1.2.10",
     "@logicflow/core": "2.0.0-beta.1",
     "@logicflow/extension": "2.0.0-beta.1",
