feat: 排班系统、页面编写

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/resource": "^6.1.15",
     "@fullcalendar/resource-timeline": "^6.1.15",
+    "@fullcalendar/rrule": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@fullcalendar/vue3": "^6.1.15",
     "@jinming6/merge-helper": "^1.2.10",
@@ -64,7 +66,7 @@
     "vue": "^3.4.21",
     "vue-code-highlight": "^0.7.8",
     "vue-codemirror": "^6.1.1",
-    "vue-draggable-plus": "^0.4.0",
+    "vue-draggable-plus": "^0.5.4",
     "vue-json-pretty": "^2.4.0",
     "vue-prism-editor": "2.0.0-alpha.2",
     "vue-router": "^4.3.0",
