--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -15,7 +15,7 @@ http {
                       '"$http_user_agent" "$http_x_forwarded_for"';
     sendfile on;
     keepalive_timeout 70;
-    client_max_body_size 500M;
+    client_max_body_size 50G;
     client_header_buffer_size 128k;
     large_client_header_buffers 4 128k;
     server {
@@ -23,12 +23,11 @@ http {
         server_name frontend;
         index index.html;
         root /usr/share/nginx/html;
-        client_max_body_size 500M;
         location ^~ /api {
             proxy_pass http://ecmdb:8000;
-            proxy_connect_timeout 300;
-            proxy_send_timeout 300;
-            proxy_read_timeout 300;
+            proxy_connect_timeout 10m;
+            proxy_send_timeout 10m;
+            proxy_read_timeout 10m;
         }
 
         location / {
