chore: CMDB file 类型 Minio 文件上传下载

--- a/.env
+++ b/.env
@@ -3,6 +3,13 @@
 ## 项目标题
 VITE_APP_TITLE = ECMDB
 VITE_BASE_API = '/api'
+
 #  html5 OR hash
 VITE_ROUTER_HISTORY = 'html5'
 VITE_PUBLIC_PATH = '/'
+
+# ECMDB API 地址
+VITE_ECMDB_API = 127.0.0.1:8000
+
+# MINIO 地址
+VITE_MINIO_ENDPOINT = 127.0.0.1:9000
