--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -30,8 +30,9 @@ http {
             proxy_read_timeout 10m;
         }
 
-        location ^~ /minio/ {
-            proxy_pass http://minio:9000/;
+        location ^~ /minio {
+            rewrite ^/minio(/.*)$ $1 break;
+            proxy_pass http://minio:9000;
             proxy_connect_timeout 300;
             proxy_send_timeout 300;
             proxy_read_timeout 300;
