--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "e-icon-picker": "^2.2.0",
     "element-plus": "^2.7.5",
     "font-awesome": "^4.7.0",
+    "guacamole-common-js": "^1.5.0",
     "index.css": "link:@logicflow/core/dist/style/index.css",
     "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
@@ -76,11 +77,14 @@
     "vuedraggable": "^4.1.0",
     "vxe-table": "^4.5.21",
     "vxe-table-plugin-element": "^4.0.1",
-    "xe-utils": "^3.5.25"
+    "xe-utils": "^3.5.25",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/guacamole-common-js": "^1.5.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.12.5",
     "@types/nprogress": "^0.2.3",
