--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@logicflow/extension": "2.0.0-beta.1",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/runtime-dom": "^3.4.27",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
     "axios": "^1.6.8",
     "cm6-theme-material-dark": "^0.2.0",
     "cm6-theme-nord": "^0.2.0",
@@ -75,11 +77,10 @@
     "vue-router": "^4.3.0",
     "vue3-icon-picker": "^0.1.3",
     "vuedraggable": "^4.1.0",
+    "vuefinder": "^2.7.0",
     "vxe-table": "^4.5.21",
     "vxe-table-plugin-element": "^4.0.1",
-    "xe-utils": "^3.5.25",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0"
+    "xe-utils": "^3.5.25"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -109,5 +110,10 @@
     "vite": "^5.2.8",
     "vite-plugin-prismjs": "^0.0.11",
     "vue-tsc": "^2.0.11"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "vuefinder@2.7.0": "patches/vuefinder@2.7.0.patch"
+    }
   }
 }
