--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "vue-router": "^4.3.0",
     "vue3-icon-picker": "^0.1.3",
     "vuedraggable": "^4.1.0",
-    "vuefinder": "^2.7.0",
+    "vuefinder": "2.7.0",
     "vxe-table": "^4.5.21",
     "vxe-table-plugin-element": "^4.0.1",
     "xe-utils": "^3.5.25"
@@ -103,7 +103,7 @@
     "npm-run-all2": "^6.1.2",
     "patch-package": "^8.0.0",
     "prettier": "^3.2.5",
-    "sass": "^1.75.0",
+    "sass-embedded": "1.78.0",
     "typescript": "~5.4.0",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
