--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@
 ## 项目标题
 VITE_APP_TITLE = ECMDB
 VITE_BASE_API = '/api'
+VITE_ECMDB_API_PREFIX = 'cmdb'
 
 #  html5 OR hash
 VITE_ROUTER_HISTORY = 'html5'
@@ -10,6 +11,7 @@ VITE_PUBLIC_PATH = '/'
 
 # ECMDB API 地址
 VITE_ECMDB_API = 127.0.0.1:8000
+VITE_ALERT_API = 127.0.0.1:8006
 
 # MINIO 地址
 VITE_MINIO_ENDPOINT = 10.31.0.200:9000
