--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -23,7 +23,7 @@ http {
         server_name frontend;
         index index.html;
         root /usr/share/nginx/html;
-        location ^~ /api {
+        location ^~ /api/cmdb {
             proxy_pass http://ecmdb:8000;
             proxy_connect_timeout 10m;
             proxy_send_timeout 10m;
