--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -24,7 +24,7 @@ http {
         index index.html;
         root /usr/share/nginx/html;
         location ^~ /api/cmdb {
-            proxy_pass http://ecmdb:8000;
+            proxy_pass http://ecmdb:8000/api;
             proxy_connect_timeout 10m;
             proxy_send_timeout 10m;
             proxy_read_timeout 10m;
