--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@fullcalendar/vue3": "^6.1.15",
     "@jinming6/merge-helper": "^1.2.10",
-    "@logicflow/core": "2.0.0-beta.1",
-    "@logicflow/extension": "2.0.0-beta.1",
+    "@logicflow/core": "2.1.1",
+    "@logicflow/extension": "2.1.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/runtime-dom": "^3.4.27",
     "@xterm/addon-fit": "^0.10.0",
