--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@
 VITE_APP_TITLE = ECMDB
 VITE_BASE_API = '/api'
 VITE_ECMDB_API_PREFIX = 'cmdb'
+VITE_ALERT_API_PREFIX = 'alert'
 
 #  html5 OR hash
 VITE_ROUTER_HISTORY = 'html5'
