--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.16.2",
+    "@codemirror/lang-html": "^6.4.10",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-markdown": "^6.3.4",
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/legacy-modes": "^6.4.0",
     "@codemirror/lint": "^6.8.5",
