chore: 开启 brotliCompress 压缩

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -4,7 +4,7 @@ COPY . .
 RUN npm install -g pnpm \
     && pnpm set registry https://registry.npmmirror.com/ \
     && pnpm install && pnpm run build
-FROM nginx:1.29.1 as deploy
+FROM peytonyip/nginx-brotli:1.29.2 as deploy
 COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD [ "nginx", "-g", "daemon off;" ]
