--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "unplugin-auto-import": "19.3.0",
     "unplugin-vue-components": "28.7.0",
     "vite": "7.1.3",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-prismjs": "^0.0.11",
     "vite-plugin-vue-mcp": "0.3.2",
     "vite-svg-loader": "5.1.0",
