--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -29,7 +29,7 @@ http {
 
     # Gzip 作为降级方案
     gzip on;
-    gzip_static: on;
+    gzip_static on;
     gzip_vary on;
     gzip_min_length 256;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
