--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@jinming6/merge-helper": "^1.2.10",
     "@logicflow/core": "2.1.2",
     "@logicflow/extension": "2.1.3",
+    "@popperjs/core": "^2.11.8",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/runtime-dom": "^3.4.27",
     "@xterm/addon-fit": "^0.10.0",
