--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "vue-router": "^4.5.1",
     "vue3-icon-picker": "^0.1.3",
     "vuedraggable": "^4.1.0",
-    "vuefinder": "2.7.0",
+    "vuefinder": "^4.0.9",
     "vxe-table": "4.6.25",
     "vxe-table-plugin-element": "^4.0.1",
     "xe-utils": "^3.5.25"
@@ -121,10 +121,5 @@
     "vite-svg-loader": "5.1.0",
     "vitest": "3.2.4",
     "vue-tsc": "^3.0.6"
-  },
-  "pnpm": {
-    "patchedDependencies": {
-      "vuefinder@2.7.0": "patches/vuefinder@2.7.0.patch"
-    }
   }
 }
